# cell_counting_analysis

./: .gitignore  CreateLabels.ipynb  README.md  Untitled.ipynb  count.py  label_maker.py  load_data.py  model.ipynb  model.py  ploob.py  pyproject.toml  test.py  train.py  viewer.py
.ipynb_checkpoints/: CreateLabels-checkpoint.ipynb  Untitled-checkpoint.ipynb  model-checkpoint.ipynb
model1/: keras_metadata.pb  saved_model.pb
model1/variables/: variables.data-00000-of-00001  variables.index
model2/: keras_metadata.pb  saved_model.pb
model2/variables/: variables.index
model3/: keras_metadata.pb  saved_model.pb
model3/variables/: variables.data-00000-of-00001  variables.index
model4/: saved_model.pb
model4/variables/: variables.data-00000-of-00001
models/empty/: keras_metadata.pb  saved_model.pb
models/empty/variables/: variables.index
models/final_model/: keras_metadata.pb  saved_model.pb
models/final_model/variables/: variables.index
models/mbm_model/: keras_metadata.pb  saved_model.pb
models/mbm_model/variables/: variables.index
models/model1/variables/: variables.data-00000-of-00001  variables.index
models/model2/variables/: variables.data-00000-of-00001
models/model3/: keras_metadata.pb  saved_model.pb
models/model4/: keras_metadata.pb
models/model4/variables/: variables.index
